# macropipe

./: .readthedocs.yml  CHANGES.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: backlog.md  conf.py  index.md  install.md  primer.md
docs/example/: csv.md  index.md  parquet.md
examples/: basic.py
src/macropipe/: __init__.py  core.py  lib.py  registry.py  util.py
tests/: conftest.py  test_core.py  test_macropipe.py  test_util.py
